Fix in SQL dump

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,4 +19,4 @@ spring.jpa.hibernate.show_sql=true
 spring.jpa.hibernate.format_sql=true
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto = create-drop
+spring.jpa.hibernate.ddl-auto = create
