--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,20 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-#spring.datasource.url=jdbc:postgresql://localhost:5432/dlabapi
-#spring.datasource.username=postgres
-#spring.datasource.password=
+spring.datasource.url=jdbc:postgresql://localhost:5432/dlabapi
+spring.datasource.username=postgres
+spring.datasource.password=
 
 
 # Disable feature detection by this undocumented parameter. Check the org.hibernate.engine.jdbc.internal.JdbcServiceImpl.configure method for more details.
-#spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 
 # Because detection is disabled you have to set correct dialect by hand.
-#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL95Dialect
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL95Dialect
 
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL95Dialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL95Dialect
 
-#spring.jpa.hibernate.show_sql=true
-#spring.jpa.hibernate.format_sql=true
+spring.jpa.hibernate.show_sql=true
+spring.jpa.hibernate.format_sql=true
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = create
